apps/media/soulsync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soulsync
  namespace: media
  labels:
    app: soulsync
    app.kubernetes.io/name: soulsync
    app.kubernetes.io/instance: soulsync
spec:
  replicas: 0
  selector:
    matchLabels:
      app: soulsync
  template:
    metadata:
      labels:
        app: soulsync
        app.kubernetes.io/name: soulsync
        app.kubernetes.io/instance: soulsync
    spec:
      containers:
        - name: soulsync
          image: boulderbadgedad/soulsync:2.8.3
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: config
              mountPath: /app/config
              subPath: config
            - name: config
              mountPath: /app/logs
              subPath: logs
            - name: config
              mountPath: /app/data
              subPath: data
            - name: downloads
              mountPath: /downloads
            - name: music
              mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: soulsync-config
        - name: downloads
          hostPath:
            path: /downloads/slskd
        - name: music
          hostPath:
            path: /media/music
